<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/tools"
    android:id="@+id/relativeLyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:visibility="visible">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnReorder"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/lytOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_order_otp"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvOrderOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/order_otp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytOrderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytOTP"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ordered_id"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/tvOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/ordered_id"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytOrderID"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_date"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/tvOrderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/ordered_id"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_below="@+id/lytOrderDate"
                android:layout_marginTop="10dp"
                android:background="@color/bg_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/bg_color"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1" />


            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/recyclerView"
                android:layout_marginTop="10dp"
                android:background="@color/bg_gray" />

            <LinearLayout
                android:id="@+id/lytOtherDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lytPriceDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/price_details"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/items"
                            android:textColor="@color/dark_gray" />

                        <TextView
                            android:id="@+id/tvItemTotal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/dark_gray" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/delivery_charge1"
                            android:textColor="@color/dark_gray" />

                        <TextView
                            android:id="@+id/tvDeliveryCharge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/dark_gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytDiscount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvDPercent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/discount"
                            android:textColor="@color/dark_gray" />

                        <TextView
                            android:id="@+id/tvDAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/dark_gray" />
                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total"
                            android:textColor="@color/dark_gray" />

                        <TextView
                            android:id="@+id/tvTotal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/dark_gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytPromo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvPromoCode"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/promo_applied"
                            android:textColor="@color/dark_gray" />

                        <TextView
                            android:id="@+id/tvPCAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/dark_gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytWallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/wallet_balance1"
                            android:textColor="@color/dark_gray" />

                        <TextView
                            android:id="@+id/tvWallet"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/dark_gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/final_total"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvFinalTotal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/bg_gray" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/other_details"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOtherDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/mShimmerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        shimmer:shimmer_duration="1200">

        <!-- Adding rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/simmer_tracker_detail" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>


    <Button
        android:id="@+id/btnReorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@drawable/bg_btn"
        android:text="@string/reorder"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold" />
</RelativeLayout>