<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/lytChangeLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tvTitleLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:textAlignment="viewStart"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:text="@string/deliver_to"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/txt_color"
            tools:drawableStartCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_toEndOf="@+id/tvTitleLocation"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="viewStart"
            android:paddingBottom="@dimen/_4sdp"
            android:text="@string/all"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lytChangeLocation"
        android:layout_above="@id/lytTotal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/lytTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@drawable/card_shadow"
        android:padding="@dimen/dimen_10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_toStartOf="@id/tvConfirmOrder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/txt_color" />

        <TextView
            android:id="@+id/tvTotalItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTotalAmount"
            android:textAlignment="viewStart"
            android:layout_toStartOf="@id/tvConfirmOrder"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/gray" />


        <TextView
            android:id="@+id/tvConfirmOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/confirm_bg"
            android:gravity="center"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/btn_continue"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lytEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_empty_cart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_items_in_cart"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="viewStart"
            android:text="@string/no_items_in_cart_message" />

        <Button
            android:id="@+id/btnShowNow"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="false"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/shop_now"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/mShimmerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        shimmer:shimmer_duration="1200">

        <!-- Adding rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_22sdp"
                android:background="@color/background" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</RelativeLayout>